# finiteAutomata

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
example/: CMakeLists.txt  main.cpp
include/: finiteAutomata.hpp  permutation.hpp  uTest.hpp
src/: finiteAutomata.cpp  main.cpp  permutation.cpp
tests/: CMakeLists.txt  main.cpp
